--- a/assets/components/Chat.custom.sass
+++ b/assets/components/Chat.custom.sass
@@ -6,7 +6,7 @@
   > div
     height: 100%
     > .chat-log-container
-      height: calc(100vh - 3.2rem - 64px)
+      height: calc(100vh - 3.2rem - 65px)
       overflow: auto
       padding: 10px 16px 7px
       .chat-message.you
@@ -35,18 +35,30 @@
           background-color: #fff
           padding: 27px
           border-radius: 7px
+          min-width: 70%
           +shadow
           .chat-name
             font-weight: 600
             font-size: 1.3rem
             margin-bottom: 10px
             display: flex
+            > div
+              word-wrap: break-word
+              width: 100%
+          p
+            word-wrap: break-word
   .chat-container
+    border-top: 1px solid #d0d0d0
+    width: 100%
+    display: block
     div
       width: 100%
       display: flex
-      flex-wrap: nowrap 
-      border-top: 1px solid #d0d0d0
+      flex-wrap: nowrap
+      > div:first-child
+        width: 100px
+        > input
+          overflow: hidden
       input
         display: block
         outline: none
@@ -63,6 +75,7 @@
         cursor: pointer
         transition: .3s ease-in-out
         text-transform: uppercase
+        border-left: 1px solid #d0d0d0
       button:focus
         background-color: #9e9e9e
 
