--- a/assets/components/Navbar.sass
+++ b/assets/components/Navbar.sass
@@ -1,16 +1,23 @@
 .navbar
   height: 64px
   width: 100%
+  background-color: #333
+  +shadow
+  display: flex
+  .navbar-title
+    margin: auto
+    display: flex
+    justify-content: center
+    align-items: center
+    padding: 0 16px
+    color: #fff
+    font-family: Futura, "Trebuchet MS", Arial, sans-serif
+    font-weight: 700
+    font-size: 1.9rem
   ul
-    background-color: #333
-    position: fixed
-    top: 0
-    left: 0
-    width: 100%
-    height: 64px
+    height: 100%
     list-style-type: none
     display: flex
-    +shadow
     li
       a
         height: 100%
