--- a/assets/navbar.sass
+++ b/assets/navbar.sass
@@ -11,7 +11,42 @@
     height: 64px
     box-shadow: 0 2px 7px rgba(0, 0, 0, .7)
     > .navbar-title
+      position: absolute
       font-family: Futura, "Trebuchet MS", Arial, sans-serif
       font-size: 3rem
       font-weight: 700
       color: #ffffff
+    > .navbar-items
+      height: 100%
+      display: flex
+      align-items: center
+      justify-content: center
+      color: white
+      margin-left: auto
+      list-style-type: none
+      padding: 0
+      > li
+        height: 100%
+        padding: 0 16px
+        display: flex
+        align-items: center
+        justify-content: center
+        transition: .3s ease-in-out
+        cursor: pointer
+        > .material-icons
+          margin-right: 13px
+          margin-top: 2.5px
+      > li:hover
+        background-color: #383838 - 10
+
+@media only screen and (max-width: 463px)
+  .navbar
+    > .navbar-wrapper
+      > .navbar-title
+        font-size: 2.5rem
+      > .navbar-items
+        > li
+          > .material-icons
+            margin: 0
+          > .navbar-item-title
+            display: none
