ADDED: time functionality

--- a/assets/chat.sass
+++ b/assets/chat.sass
@@ -63,6 +63,11 @@
         font-weight: 700
         margin-bottom: 7px
 
+      > .chat-time
+        font-size: 11px
+        margin-top: 10px
+        color: #8c8c8c
+
     > .chat-profile
       height: 70px
       width: 70px
