--- a/assets/chat.sass
+++ b/assets/chat.sass
@@ -8,6 +8,7 @@
     width: 100%
     border-top: 1px solid #b5b5b5
     display: flex
+    background-color: #fff
 
     > input
       padding: .55rem .7rem .7rem .7rem
@@ -19,20 +20,26 @@
 
     > button
       border: none
-      border-left: 1px solid #b5b5b5
-      color: #fff
-      width: 70px
-      text-transform: uppercase
+      width: 43px
       color: #565656
-      background-color: #dadada
       outline: none
       transition: .3s ease-in-out
+      background-color: transparent
+      display: flex
+      justify-content: center
+      align-items: center
+      cursor: pointer
     
     > button:hover
-      background-color: #dadada + 20
+      color: #333
+      > .material-icons
+        animation: .4s pulse
 
-    > button:focus
+    > button:active
       background-color: #dadada - 20
+      border-radius: 50%
+      > .material-icons
+        animation: .4s pulseInverted
 
   .chat-message.me
     .chat-profile
@@ -42,7 +49,7 @@
     .chat-profile
       margin-right: 10px
 
-  .chat-message 
+  .chat-message
     display: flex
     margin-bottom: 10px
 
@@ -91,3 +98,20 @@
         height: 100%
         width: auto
         margin: 0 -100%
+
+
+@keyframes pulse
+  0%
+    transform: scale(1)
+  50%
+    transform: scale(1.5)
+  100%
+    transform: scale(1)
+
+@keyframes pulseInverted
+  0%
+    transform: scale(1)
+  50%
+    transform: scale(.7)
+  100%
+    transform: scale(1)
