ADDED: imgur file uploads instead of raw links or base64 FIXED: navbar z-index

--- a/assets/navbar.sass
+++ b/assets/navbar.sass
@@ -10,6 +10,7 @@
     position: fixed
     height: 64px
     box-shadow: 0 2px 7px rgba(0, 0, 0, .7)
+    z-index: 9999
     > .navbar-title
       position: absolute
       font-family: Futura, "Trebuchet MS", Arial, sans-serif
